--- a/scripts/EDA.ipynb
+++ b/scripts/EDA.ipynb
@@ -135,7 +135,142 @@
    "id": "3055be7d-077b-45ab-bad2-8f2e6e7b15a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# =============================\n",
+    "#   Exploratory Data Analysis MERGE Dataset\n",
+    "# =============================\n",
+    "\n",
+    "# 1. Imports\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scripts.loader import load_merge_master\n",
+    "\n",
+    "# 2. Configuração e seleção do master_metadata\n",
+    "master_path = 'metadata/master_metadata_audio_balanced.csv'  # Troque pelo master que quiser\n",
+    "df = pd.read_csv(master_path)\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(\"Colunas:\", df.columns.tolist())\n",
+    "\n",
+    "# 3. Amostra dos dados\n",
+    "display(df.head(10))\n",
+    "\n",
+    "# 4. Checagem básica\n",
+    "print(df.info())\n",
+    "print(\"\\nDados ausentes por coluna:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# 5. Contagem por splits (train/val/test)\n",
+    "for split_col in ['split_70_15_15', 'split_40_30_30']:\n",
+    "    if split_col in df.columns:\n",
+    "        print(f\"\\nDistribuição do split {split_col}:\")\n",
+    "        print(df[split_col].value_counts())\n",
+    "        sns.countplot(data=df, x=split_col)\n",
+    "        plt.title(f'Distribuição dos splits: {split_col}')\n",
+    "        plt.show()\n",
+    "\n",
+    "# 6. Distribuição de quadrantes\n",
+    "if 'quadrant' in df.columns:\n",
+    "    print(\"\\nDistribuição por quadrante:\")\n",
+    "    print(df['quadrant'].value_counts())\n",
+    "    sns.countplot(data=df, x='quadrant')\n",
+    "    plt.title('Distribuição de Quadrantes Emocionais')\n",
+    "    plt.show()\n",
+    "\n",
+    "# 7. Distribuição de arousal/valence\n",
+    "if 'arousal' in df.columns and 'valence' in df.columns:\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "    sns.histplot(df['arousal'], bins=20, kde=True, ax=ax[0])\n",
+    "    ax[0].set_title('Distribuição: Arousal')\n",
+    "    sns.histplot(df['valence'], bins=20, kde=True, ax=ax[1])\n",
+    "    ax[1].set_title('Distribuição: Valence')\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Dispersão arousal vs valence por quadrante\n",
+    "    plt.figure(figsize=(8,6))\n",
+    "    sns.scatterplot(data=df, x='valence', y='arousal', hue='quadrant', palette='tab10')\n",
+    "    plt.title('Arousal vs Valence (colorido por quadrante)')\n",
+    "    plt.show()\n",
+    "\n",
+    "# 8. Distribuição de anos (quando houver coluna year/actualyear)\n",
+    "for ycol in ['year', 'Year', 'ActualYear']:\n",
+    "    if ycol in df.columns:\n",
+    "        print(f\"\\nDistribuição por ano: {ycol}\")\n",
+    "        print(df[ycol].value_counts().sort_index())\n",
+    "        plt.figure(figsize=(12,4))\n",
+    "        sns.countplot(data=df, x=ycol, order=sorted(df[ycol].dropna().unique()))\n",
+    "        plt.xticks(rotation=90)\n",
+    "        plt.title(f'Distribuição por Ano ({ycol})')\n",
+    "        plt.show()\n",
+    "        break\n",
+    "\n",
+    "# 9. Top artistas/títulos/gêneros (quando disponível)\n",
+    "for acol in ['artist', 'Artist']:\n",
+    "    if acol in df.columns:\n",
+    "        print(\"\\nTop 15 artistas:\")\n",
+    "        print(df[acol].value_counts().head(15))\n",
+    "        sns.countplot(y=df[acol], order=df[acol].value_counts().head(10).index)\n",
+    "        plt.title('Top 10 Artistas')\n",
+    "        plt.show()\n",
+    "        break\n",
+    "\n",
+    "for tcol in ['title', 'Title']:\n",
+    "    if tcol in df.columns:\n",
+    "        print(\"\\nTop 15 músicas:\")\n",
+    "        print(df[tcol].value_counts().head(15))\n",
+    "        break\n",
+    "\n",
+    "for gcol in ['genres', 'Genres']:\n",
+    "    if gcol in df.columns:\n",
+    "        from collections import Counter\n",
+    "        all_genres = df[gcol].dropna().astype(str).str.cat(sep=';').split(';')\n",
+    "        genres_count = Counter([g.strip().lower() for g in all_genres if g.strip() != ''])\n",
+    "        print(\"\\nTop 20 gêneros:\")\n",
+    "        for g, v in genres_count.most_common(20):\n",
+    "            print(f\"{g}: {v}\")\n",
+    "        top_genres = [g for g, _ in genres_count.most_common(10)]\n",
+    "        plt.figure(figsize=(8,5))\n",
+    "        sns.barplot(y=top_genres, x=[genres_count[g] for g in top_genres], orient='h')\n",
+    "        plt.title('Top 10 Gêneros')\n",
+    "        plt.xlabel('Frequência')\n",
+    "        plt.ylabel('Gênero')\n",
+    "        plt.show()\n",
+    "        break\n",
+    "\n",
+    "# 10. Distribuição por duração (se existir)\n",
+    "for dcol in ['duration', 'Duration']:\n",
+    "    if dcol in df.columns:\n",
+    "        plt.figure(figsize=(8,4))\n",
+    "        sns.histplot(df[dcol].dropna(), bins=30, kde=True)\n",
+    "        plt.title('Distribuição de Duração das Músicas')\n",
+    "        plt.xlabel('Duração (s)')\n",
+    "        plt.show()\n",
+    "        break\n",
+    "\n",
+    "# 11. Relação entre splits e quadrantes\n",
+    "if 'quadrant' in df.columns:\n",
+    "    for split_col in ['split_70_15_15', 'split_40_30_30']:\n",
+    "        if split_col in df.columns:\n",
+    "            print(f\"\\nCruzamento {split_col} vs Quadrant:\")\n",
+    "            cross = pd.crosstab(df[split_col], df['quadrant'])\n",
+    "            print(cross)\n",
+    "            sns.heatmap(cross, annot=True, fmt='d')\n",
+    "            plt.title(f'{split_col} vs Quadrant')\n",
+    "            plt.show()\n",
+    "\n",
+    "# 12. Relação entre gêneros e quadrantes (opcional)\n",
+    "if 'quadrant' in df.columns and 'genres' in df.columns:\n",
+    "    print(\"\\nExemplo: principais gêneros por quadrante:\")\n",
+    "    quadrants = sorted(df['quadrant'].unique())\n",
+    "    for q in quadrants:\n",
+    "        sub = df[df['quadrant']==q]\n",
+    "        all_genres = sub['genres'].dropna().astype(str).str.cat(sep=';').split(';')\n",
+    "        genres_count = Counter([g.strip().lower() for g in all_genres if g.strip() != ''])\n",
+    "        print(f\"Quadrant {q}: {[g for g, v in genres_count.most_common(5)]}\")\n",
+    "\n",
+    "# 13. Conclusão automática (resuma principais insights ou exporte os gráficos)\n",
+    "print(\"\\n== FIM DA EDA ==\")\n"
+   ]
   }
  ],
  "metadata": {
