--- a/scripts/conferir_existencia.ipynb
+++ b/scripts/conferir_existencia.ipynb
@@ -2,24 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "14450aa6-353a-4ad9-9bd2-ac5ca4983745",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERRO ao ler metadata/master_metadata_audio_balanced.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_audio_balanced.csv'\n",
-      "ERRO ao ler metadata/master_metadata_audio_complete.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_audio_complete.csv'\n",
-      "ERRO ao ler metadata/master_metadata_lyrics_balanced.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_lyrics_balanced.csv'\n",
-      "ERRO ao ler metadata/master_metadata_lyrics_complete.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_lyrics_complete.csv'\n",
-      "ERRO ao ler metadata/master_metadata_bimodal_balanced.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_bimodal_balanced.csv'\n",
-      "ERRO ao ler metadata/master_metadata_bimodal_balanced.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_bimodal_balanced.csv'\n",
-      "ERRO ao ler metadata/master_metadata_bimodal_complete.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_bimodal_complete.csv'\n",
-      "ERRO ao ler metadata/master_metadata_bimodal_complete.csv: [Errno 2] No such file or directory: 'metadata/master_metadata_bimodal_complete.csv'\n",
       "\n",
-      "Nenhum arquivo faltando em nenhuma modalidade!\n"
+      "[audio_balanced] Total de músicas no master: 3232\n",
+      "[audio_balanced] Arquivos faltando: 0\n",
+      "\n",
+      "[audio_complete] Total de músicas no master: 3554\n",
+      "[audio_complete] Arquivos faltando: 0\n",
+      "\n",
+      "[lyrics_balanced] Total de músicas no master: 2400\n",
+      "[lyrics_balanced] Arquivos faltando: 0\n",
+      "\n",
+      "[lyrics_complete] Total de músicas no master: 2568\n",
+      "[lyrics_complete] Arquivos faltando: 0\n",
+      "\n",
+      "[bimodal_balanced_audio] Total de músicas no master: 2000\n",
+      "[bimodal_balanced_audio] Arquivos faltando: 0\n",
+      "\n",
+      "[bimodal_balanced_lyrics] Total de músicas no master: 2000\n",
+      "[bimodal_balanced_lyrics] Arquivos faltando: 86\n",
+      "\n",
+      "[bimodal_complete_audio] Total de músicas no master: 2216\n",
+      "[bimodal_complete_audio] Arquivos faltando: 0\n",
+      "\n",
+      "[bimodal_complete_lyrics] Total de músicas no master: 2216\n",
+      "[bimodal_complete_lyrics] Arquivos faltando: 133\n",
+      "\n",
+      "--- Relatório Final da Validação ---\n",
+      "⚠️ Encontrados 219 ficheiros em falta. Relatório salvo em 'relatorio_arquivos_faltantes.csv'\n"
      ]
     }
    ],
@@ -27,61 +46,61 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "# ======= CONFIGURAÇÕES DE TODAS AS MODALIDADES =======\n",
+    "# ======= CONFIGURAÇÕES DE TODAS AS MODALIDADES (CAMINHOS CORRIGIDOS) =======\n",
     "modalidades = [\n",
     "    {\n",
     "        'nome': 'audio_balanced',\n",
-    "        'master': 'metadata/master_metadata_audio_balanced.csv',\n",
-    "        'data_subfolder': 'data/audio/audio_balanced',\n",
-    "        'file_ext': '',      # coloque '.mp3', '.wav' se houver\n",
+    "        'master': '../metadata/master_metadata_audio_balanced.csv',\n",
+    "        'data_subfolder': '../data/audio/audio_balanced',\n",
+    "        'file_ext': '.mp3',\n",
     "        'type': 'audio'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'audio_complete',\n",
-    "        'master': 'metadata/master_metadata_audio_complete.csv',\n",
-    "        'data_subfolder': 'data/audio/audio_complete',\n",
-    "        'file_ext': '',\n",
+    "        'master': '../metadata/master_metadata_audio_complete.csv',\n",
+    "        'data_subfolder': '../data/audio/audio_complete',\n",
+    "        'file_ext': '.mp3',\n",
     "        'type': 'audio'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'lyrics_balanced',\n",
-    "        'master': 'metadata/master_metadata_lyrics_balanced.csv',\n",
-    "        'data_subfolder': 'data/lyrics/lyrics_balanced',\n",
+    "        'master': '../metadata/master_metadata_lyrics_balanced.csv',\n",
+    "        'data_subfolder': '../data/lyrics/lyrics_balanced',\n",
     "        'file_ext': '.txt',\n",
     "        'type': 'lyrics'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'lyrics_complete',\n",
-    "        'master': 'metadata/master_metadata_lyrics_complete.csv',\n",
-    "        'data_subfolder': 'data/lyrics/lyrics_complete',\n",
+    "        'master': '../metadata/master_metadata_lyrics_complete.csv',\n",
+    "        'data_subfolder': '../data/lyrics/lyrics_complete',\n",
     "        'file_ext': '.txt',\n",
     "        'type': 'lyrics'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'bimodal_balanced_audio',\n",
-    "        'master': 'metadata/master_metadata_bimodal_balanced.csv',\n",
-    "        'data_subfolder': 'data/bimodal/bimodal_balanced/audio',\n",
-    "        'file_ext': '',\n",
+    "        'master': '../metadata/master_metadata_bimodal_balanced.csv', \n",
+    "        'data_subfolder': '../data/bimodal/bimodal_balanced/audio',\n",
+    "        'file_ext': '.mp3',\n",
     "        'type': 'audio'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'bimodal_balanced_lyrics',\n",
-    "        'master': 'metadata/master_metadata_bimodal_balanced.csv',\n",
-    "        'data_subfolder': 'data/bimodal/bimodal_balanced/lyrics',\n",
+    "        'master': '../metadata/master_metadata_bimodal_balanced.csv', \n",
+    "        'data_subfolder': '../data/bimodal/bimodal_balanced/lyrics',\n",
     "        'file_ext': '.txt',\n",
     "        'type': 'lyrics'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'bimodal_complete_audio',\n",
-    "        'master': 'metadata/master_metadata_bimodal_complete.csv',\n",
-    "        'data_subfolder': 'data/bimodal/bimodal_complete/audio',\n",
-    "        'file_ext': '',\n",
+    "        'master': '../metadata/master_metadata_bimodal_complete.csv',\n",
+    "        'data_subfolder': '../data/bimodal/bimodal_complete/audio',\n",
+    "        'file_ext': '.mp3',\n",
     "        'type': 'audio'\n",
     "    },\n",
     "    {\n",
     "        'nome': 'bimodal_complete_lyrics',\n",
-    "        'master': 'metadata/master_metadata_bimodal_complete.csv',\n",
-    "        'data_subfolder': 'data/bimodal/bimodal_complete/lyrics',\n",
+    "        'master': '../metadata/master_metadata_bimodal_complete.csv',\n",
+    "        'data_subfolder': '../data/bimodal/bimodal_complete/lyrics',\n",
     "        'file_ext': '.txt',\n",
     "        'type': 'lyrics'\n",
     "    },\n",
@@ -94,49 +113,73 @@
     "        df = pd.read_csv(master_csv)\n",
     "    except Exception as e:\n",
     "        print(f\"ERRO ao ler {master_csv}: {e}\")\n",
-    "        return []\n",
+    "        return None\n",
     "\n",
     "    print(f\"\\n[{nome}] Total de músicas no master: {len(df)}\")\n",
     "\n",
+    "    # Padroniza nomes de colunas para minúsculas para robustez\n",
+    "    df.columns = [c.lower() for c in df.columns]\n",
+    "\n",
     "    for idx, row in df.iterrows():\n",
-    "        quad = None\n",
-    "        for qcol in ['quadrant', 'Quadrant']:\n",
-    "            if qcol in df.columns:\n",
-    "                quad = row[qcol]\n",
-    "                break\n",
+    "        quad = row.get('quadrant')\n",
     "        if quad is None:\n",
-    "            print(f\"[{nome}] Coluna 'quadrant' não encontrada!\")\n",
-    "            break\n",
+    "            print(f\"[{nome}] Coluna 'quadrant' não encontrada na linha {idx}!\")\n",
+    "            continue\n",
     "\n",
-    "        song_id = row['song_id'] if 'song_id' in df.columns else row['Song']\n",
+    "        song_id = row['song_id']\n",
+    "        \n",
+    "        # --- INÍCIO DA CORREÇÃO ---\n",
+    "        # Monta o nome da pasta do quadrante de forma segura,\n",
+    "        # lidando com valores como 'Q4' (texto) ou 4 (número)\n",
+    "        if isinstance(quad, str) and quad.startswith('Q'):\n",
+    "            quad_folder = quad\n",
+    "        else:\n",
+    "            # Converte para float primeiro para lidar com casos como '4.0'\n",
+    "            quad_folder = f'Q{int(float(quad))}' \n",
+    "        # --- FIM DA CORREÇÃO ---\n",
     "\n",
-    "        # Monta caminho do arquivo físico\n",
-    "        file_path = os.path.join(data_subfolder, f'Q{quad}', f'{song_id}{file_ext}')\n",
+    "        file_path = os.path.join(data_subfolder, quad_folder, f'{song_id}{file_ext}')\n",
+    "        \n",
     "        if not os.path.exists(file_path):\n",
     "            missing.append({'modalidade': nome, 'song_id': song_id, 'quadrant': quad, 'path_esperado': file_path})\n",
     "\n",
     "    print(f\"[{nome}] Arquivos faltando: {len(missing)}\")\n",
     "    return missing\n",
     "\n",
-    "# ======= EXECUTA PARA TODAS AS MODALIDADES =======\n",
+    "# ======= EXECUTA PARA TODAS AS MODALIDADES (LÓGICA CORRIGIDA) =======\n",
     "all_missing = []\n",
-    "for m in modalidades:\n",
-    "    faltantes = checar_modalidade(m['nome'], m['master'], m['data_subfolder'], m['file_ext'], m['type'])\n",
-    "    all_missing.extend(faltantes)\n",
+    "houve_erro_leitura = False # <-- CORRIGIDO: Adiciona um sinalizador de erro\n",
     "\n",
-    "# ======= SALVA RELATÓRIO FINAL =======\n",
-    "if all_missing:\n",
-    "    df_missing = pd.DataFrame(all_missing)\n",
-    "    df_missing.to_csv('relatorio_arquivos_faltantes.csv', index=False)\n",
-    "    print(\"\\nRelatório salvo em relatorio_arquivos_faltantes.csv\")\n",
+    "for m in modalidades:\n",
+    "    # Tenta ler apenas os ficheiros master que existem\n",
+    "    if not os.path.exists(m['master']):\n",
+    "        print(f\"AVISO: Ficheiro master '{m['master']}' não encontrado, a pular esta verificação.\")\n",
+    "        continue\n",
+    "\n",
+    "    faltantes = checar_modalidade(m['nome'], m['master'], m['data_subfolder'], m['file_ext'], m['type'])\n",
+    "    \n",
+    "    if faltantes is None:\n",
+    "        houve_erro_leitura = True # <-- CORRIGIDO: Sinaliza que um erro ocorreu\n",
+    "    else:\n",
+    "        all_missing.extend(faltantes)\n",
+    "\n",
+    "# ======= SALVA RELATÓRIO FINAL (LÓGICA CORRIGIDA) =======\n",
+    "print(\"\\n--- Relatório Final da Validação ---\")\n",
+    "if houve_erro_leitura:\n",
+    "    print(\"❌ A verificação não pôde ser concluída devido a erros na leitura de um ou mais ficheiros de metadados.\")\n",
     "else:\n",
-    "    print(\"\\nNenhum arquivo faltando em nenhuma modalidade!\")\n"
+    "    if all_missing:\n",
+    "        df_missing = pd.DataFrame(all_missing)\n",
+    "        df_missing.to_csv('relatorio_arquivos_faltantes.csv', index=False)\n",
+    "        print(f\"⚠️ Encontrados {len(all_missing)} ficheiros em falta. Relatório salvo em 'relatorio_arquivos_faltantes.csv'\")\n",
+    "    else:\n",
+    "        print(\"✅ SUCESSO! Nenhum arquivo de dados faltando em nenhuma modalidade!\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b493f1-87a1-4508-8d9b-b5eea05b4567",
+   "id": "9da46475-7480-44be-8916-9c0621f94e50",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -144,9 +187,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -158,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
